# e-retail

./: pyproject.toml
config/: settings.py  urls.py
supplier_network/: apps.py  models.py  urls.py
users/: managers.py  models.py  urls.py
